Remove bottom margin from last elements in content and post-body to fix gap on services and switch2porting pages

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -268,6 +268,15 @@ main {
 
 .post-body {
   margin-top: 2rem;
+  margin-bottom: 0;
+}
+
+.post-body > *:last-child {
+  margin-bottom: 0;
+}
+
+.content > *:last-child {
+  margin-bottom: 0;
 }
 
 time {
